Add refresh token route, Update api docs to include the new refresh token route, Add 401 status code to routes starting with /users
